[DDW-755] Fix z-index of custom select values

--- a/source/themes/simple/SimpleInput.scss
+++ b/source/themes/simple/SimpleInput.scss
@@ -93,7 +93,6 @@ $input-placeholder-font-family: var(--rp-input-placeholder-font-family, $theme-f
     position: relative;
     top: 0;
     width: 100%;
-    z-index: 1;
   }
 }
 
